[package]
name = "yammer"
version = "0.1.0"
edition = "2021"

[dependencies]
getopts = "0.2"
reqwest = { version = "0.11", features = ["blocking"] }
rustyline = "14"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "macros"] }

arrrg = "0.4"
arrrg_derive = "0.4"
