[package]
name = "yammer"
version = "0.1.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "yammer provides an ollama-compatible client library."
license = "Apache-2.0"
repository = "https://github.com/rescrv/yammer"

[dependencies]
getopts = "0.2"
reqwest = { version = "0.11", features = ["blocking"] }
rustyline = "14"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "macros"] }

arrrg = "0.4"
arrrg_derive = "0.4"
